@@ -5,26 +5,92 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
+import org.springframework.beans.factory.annotation.Autowired;
+
+import com.rb.common.api.datafilestorage.DataStorage;
+import com.rb.common.api.logging.LogLevel;
+import com.rb.common.api.logging.LogManager;
+import com.rb.common.api.logging.LoggingAction;
+import com.rb.instagramfollowerbooster.InstagramFollowerBoosterApplication;
+import com.rb.instagramfollowerbooster.model.UserSession;
 import com.rb.instagramfollowerbooster.model.scripts.ScriptsInfos;
-import com.rb.instagramfollowerbooster.model.scripts.results.AbstractScriptResult;
+import com.rb.instagramfollowerbooster.model.scripts.inputs.ScriptInputDto;
 
 public abstract class AbstractScriptRunner<ResultType> {
 			
+	private static final long TIMEOUT_FOLLOW_PROCESS = 1; // in hours
+
 	
+	@Autowired
+	DataStorage dataStorage;
 	
-	public ResultType processScript(ScriptsInfos scriptInfos) throws IOException {
+	@Autowired
+	UserSession userSession;
+	
+	@Autowired
+	LogManager logger;
+	
+	public ResultType processScript(ScriptsInfos scriptInfos, ScriptInputDto inputDto) throws Exception {
 		
-		String command = "python .." + File.separator + scriptInfos.getPath();
+		if(userSession == null || userSession.getInstaUsername() == null || userSession.getInstaUsername().isEmpty() || userSession.getInstaPassword() == null || userSession.getInstaPassword().isEmpty())
+			throw new Exception("The login and/or the password (of instagram account) is missing to run the script.");
+		
+		String pythonDirPath = (String) dataStorage.getData(InstagramFollowerBoosterApplication.ARG_NAME_PYTHON_PATH, String.class);
+		String command = pythonDirPath + File.separator + "python .." + File.separator + scriptInfos.getPath();
+		String [] pythonArgs = new String [] {"-u", userSession.getInstaUsername(), "-p", userSession.getInstaPassword()};
+		pythonArgs = addArrayValuesToArray(pythonArgs, getPythonAdditionnalParameters(inputDto));
+		
+		String[] commandWithParameters = { "cmd", "/C", command};
+		commandWithParameters = addArrayValuesToArray(commandWithParameters, pythonArgs);
 		File workspace = new File("workspace");
+		if(!workspace.exists())
+			workspace.mkdirs();
 		
-		Process process = Runtime.getRuntime().exec(command, null, workspace);
+		
+		
+		ProcessBuilder builderProc = new ProcessBuilder(commandWithParameters);
+		builderProc.directory(workspace);
+//		builderProc.redirectError(new File("C:\\Users\\rbenhmidane\\Documents\\Repositories\\Instagram-follower-booster\\workspace\\TMP\\errors.txt"));
+//		builderProc.redirectInput(new File("C:\\Users\\rbenhmidane\\Documents\\Repositories\\Instagram-follower-booster\\workspace\\TMP\\input.txt"));
+//		builderProc.redirectOutput(new File("C:\\Users\\rbenhmidane\\Documents\\Repositories\\Instagram-follower-booster\\workspace\\TMP\\output.txt"));
+//		builderProc.
+		Process process = builderProc.start();
+		
+//		Process process = Runtime.getRuntime().exec(commandWithParameters, null, workspace);
+		if(!process.waitFor(TIMEOUT_FOLLOW_PROCESS, TimeUnit.HOURS))
+			process.destroyForcibly();
+		
+		
+		
+		
 		String output = readContentOfOutputStream(process.getInputStream());
+		String outputErr = readContentOfOutputStream(process.getErrorStream());
+		if(outputErr.contains("ERR") || outputErr.contains("Error:"))
+			logger.log("Error logs have been detected at the (err) output of the script " + scriptInfos.name() + ". More details: " + outputErr, LogLevel.ERROR, new LoggingAction[] {LoggingAction.File});
 		
-		return getResult(output);
+		return getResult(output, outputErr);
 	}
 	
-	protected abstract ResultType getResult(String outputOfScript);
+	private String[] addArrayValuesToArray(String[] pythonArgs, String[] pythonAdditionnalParameters) {
+		if(pythonAdditionnalParameters == null || pythonAdditionnalParameters.length == 0)
+			return pythonArgs;
+		
+		String [] result = new String[pythonArgs.length + pythonAdditionnalParameters.length];
+		for(int i = 0; i < pythonArgs.length; i++) {
+			result[i] = pythonArgs[i];
+		}
+		for(int i = pythonArgs.length; i < result.length; i++) {
+			result[i] = pythonAdditionnalParameters[i - pythonArgs.length];
+		}
+		return result;
+	}
+
+	protected abstract String[] getPythonAdditionnalParameters(ScriptInputDto inputDto) throws Exception;
+	protected abstract ResultType getResult(String outputOfScript, String outputErr) throws Exception;
 	
 	
 	/*
@@ -37,9 +103,18 @@ public abstract class AbstractScriptRunner<ResultType> {
 		String line;
 		
 		while( (line = reader.readLine()) != null) {
-			result += line;
+			result += line + "\r\n";
 		}
 		
+		return result;
+	}
+	
+	protected String extractScriptOutputValue(String output) throws Exception {
+		Pattern pattern = Pattern.compile("\\[\\[\\[(.*)\\]\\]\\]");
+		Matcher matcher = pattern.matcher(output);
+		if(!matcher.find())
+			throw new Exception("The result has not been found inside the ouput of the script. Output = " + output);
+		String result = matcher.group(1);
 		return result;
 	}
 	
